# Semantic-Style-Pooler

Sentiment-Circle/: .gitignore  ISOTROPY_SCORES_IMPLEMENTATION.md  NOTEBOOK_FUNCTION_REFERENCE.md  NOTEBOOK_UPDATE.md  README_REFACTORING.md  REFACTORING.md  REFACTORING_COMPLETE.md  REFACTORING_FINAL_SUMMARY.md  REFACTORING_PHASE3.md  REFACTORING_SUMMARY.md
Sentiment-Circle/dataset/: Crowdflower_subset_test.csv  Crowdflower_subset_train.csv  Crowdflower_subset_valid.csv  Test_df.csv  Train_df.csv  Valid_df.csv  goemotions_12pac_mapping.csv  goemotions_12pac_mapping_vad.csv  sentiment_test_df.csv  sentiment_train_df.csv  sentiment_valid_df.csv
Sentiment-Circle/my-project/: pyproject.toml
Sentiment-Circle/notebook/: preprocess.ipynb
Sentiment-Circle/utils/: block_classifier_train.py  clf_trainer.py  dataset_preprocessing.py  demo2.ipynb  head_objectives.py  hypra_search.sh  loss_function.py  metrics.py  modeling_config.py  modeling_encoders.py  modeling_utils.py  plot_2D.py  sentence_batch_utils.py  style_classifier.sh  train.py  train.sh  train_flow_ngpt.ipynb
Sentiment-Circle/utils/IsoScore_functions/: existing_scores.py
Sentiment-Circle/utils/config/: __init__.py  arguments.py
Sentiment-Circle/utils/data/: __init__.py  batch_utils.py  data_loader.py  label_utils.py  preprocessing.py
Sentiment-Circle/utils/metrics/: __init__.py  base.py  classification.py  contrastive.py  regression.py
Sentiment-Circle/utils/model/: __init__.py  classifier_strategies.py  modeling_classifier.py  modeling_config.py  modeling_encoders.py  modeling_utils.py  nGPT_model.py  (+2 more)
(+14 files in other folders)
