[project]
name = "my-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.8.1",
    "datasets>=3.6.0",
    "editables>=0.5",
    "flash-attn>=2.8.1",
    "hatchling>=1.27.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.3",
    "mplcursors>=0.6",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "transformers>=4.53.0",
    "vllm>=0.9.1",
    "wandb>=0.21.0",
    "wheel>=0.45.1",
]
